# sky_pro_beta

./: .gitignore  pyproject.toml
src/: data_read.py  decorators.py  generators.py  logger.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  operations.json  test_data_read.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
